Aliases and redirects can now be separately enabled for the SSL and non-SSL websites of a virtual server.
The Change IP Addresses	page can now be used to update the external DNS address of multiple virtual servers, as well as the actual address.
Alias servers can now be re-pointed to a different target, using the Move Virtual Server page or the move-domain API command.
A single virtual server can now be owned by multiple resellers, each of whom has permissions to manage it. This can be useful if reseller accounts are used as an additional layer of administrative control in Virtualmin.
Reseller accounts can now have an associated Unix account for FTP/SSH access, which has permissions to access all managed domains' files.
---- Changes since 4.07 ----
Updated the Roundcube script installer to version 1.0.1 and 0.8.7, Revive AdServer to 3.0.4, phpMyAdmin to 4.2.0, Piwik to 2.2.2, OpenGoo to 2.5.1.4, Dolibarr to 3.5.2, phpList to 3.0.6, Drupal to 6.31 and 7.28, MediaWiki to 1.22.6, Django to 1.4.12 and 1.6.4, ownCloud to 6.0.3, phpMyFAQ to 2.8.9, Joomla to 3.3.0 and 2.5.20, TikiWiki to 12.1 and 6.14, Node.JS to 0.10.28, Moodle to 2.6.3, Z-push to 2.1.2, and WordPress to 3.9.1.
Reseller accounts can now be granted the ability to edit and create other resellers.
DKIM keys can now be set on a domain by domain basis, rather than all virtual servers using the same key.
Fixed support for the Options directive in Apache 2.4.
---- Changes since 4.08 ----
Updated the phpMyAdmin script installer to version 4.2.3, Revive Adserver to 3.0.5, Magento to 1.9.0.1, Instiki to 0.19.7, TikiWiki to 12.2, FengOffice to 2.6.1, PiWik to 2.3.0, MediaWiki to 1.23.0 and 1.19.16, Dolibarr to 3.5.3, phpMyFAQ to 2.8.10, ZenPhoto to 1.4.6, osCommerce to 2.3.4, Joomla to 3.3.1 and 2.5.21, and Django to 1.6.5 and 1.4.13.
Added Virtualmin configuration options for commands to run before and after a reseller is created, modified or deleted.