@@ -987,6 +987,7 @@ edit_aliascopy=Mail aliases mode
 edit_email=Contact email
 edit_email_def=Administrator's mailbox
 edit_passwd=Administration password
+edit_dbsync=Warning - any database passwords will also be updated
 edit_parent=Parent virtual server
 edit_lv=Leave unchanged
 edit_set=Set to ..
@@ -4469,6 +4470,7 @@ cat_custom=System Customization
 pass_title=Change Password
 pass_ecannot=You are not allowed to change the password for this domain
 pass_ecannot2=You must specify a domain to change the password for
+pass_dbsync=Warning - changing this domain's administration password will also update the password needed to connect to its databases.
 pass_header1=Change virtual server password
 pass_header2=Change your password
 pass_new1=New password
