@@ -1452,3 +1452,4 @@ Fixed support for the Options directive in Apache 2.4.
 ---- Changes since 4.08 ----
 Updated the phpMyAdmin script installer to version 4.2.3, Revive Adserver to 3.0.5, Magento to 1.9.0.1, Instiki to 0.19.7, TikiWiki to 12.2, FengOffice to 2.6.1, PiWik to 2.3.0, MediaWiki to 1.23.0 and 1.19.16, Dolibarr to 3.5.3, phpMyFAQ to 2.8.10, ZenPhoto to 1.4.6, osCommerce to 2.3.4, Joomla to 3.3.1 and 2.5.21, and Django to 1.6.5 and 1.4.13.
 Added Virtualmin configuration options for commands to run before and after a reseller is created, modified or deleted.
+Added a warning message on the password change forms if a domain's MySQL or PostgreSQL logins would also be effected.
